# co-lab

./: .gitignore  .npmignore  .prettierignore  README.md  doc.py  package.json  rx-vdom-config.ts  template.py  typedoc.js  webpack.config.ts
.yw_pipeline/: yw_pipeline.py
assets/: doc.api.md  doc.how-to.config.md  doc.how-to.config.projects.md  doc.how-to.custom-home.md  doc.how-to.md  doc.md  doc.tutorials.md  doc.tutorials.quick-tour.md  home.md  index.md
components/colab_backend_project/: Dockerfile  package.json  pyproject.toml
components/colab_backend_project/colab_backend/: app.py  implementation.py  main_docker.py  main_localhost.py  router.py  schemas.py
components/colab_backend_project/tests/: test_compute.py
components/tdse-1d/: README.md  package.json
components/tdse-1d/.yw_pipeline/: yw_pipeline.py
components/tdse-1d/src/: index.html  script.js  style.css
src/: auto-generated.ts
src/app/: app-state.ts  app-view.ts  disconnected.view.ts  index.html  index.ts  main.ts  on-load.ts  style.css  top-banner.view.ts
src/app/common/: buttons.ts  code-editor.view.ts  data.view.ts  expandable-group.view.ts  index.ts  links.view.ts  logs-explorer.view.ts  logs-tab.view.ts  mount-reactive-nav.ts  patches.ts  py-yw-references.view.ts  utils-nav.ts  utils-view.ts
src/app/components/: examples.ts  index.ts  package-explorer.view.ts  package.views.ts  state.ts
src/app/dashboard/: index.ts
src/app/doc/: index.ts  md-widgets.ts
src/app/environment/: commands.view.ts  dispatches.view.ts  index.ts  state.ts
src/app/explorer/: actions.factory.ts  (+12 more)
(+71 files in other folders)
