[project]
name = "colab_backend"
version = "0.1.0"
description = "A backend created by the youwol pipeline 'pipeline_python_backend'."
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.24",
    "numpy==2.1.1",
    "yw_clients==0.1.13.dev"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pip-audit",
    "pylint",
    "pycodestyle",
    "pydocstyle",
    "isort",
    "black[d]",
    "mypy",
    "pdoc",
    "build",
    "twine",
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "matplotlib"
]
[build-system]
requires = [
    "setuptools>=67.7.2",
]

[tool.setuptools]
packages = ["colab_backend"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals"
]
[tool.mypy]
# ignore_missing_imports = true

[project.scripts]
run_colab_backend = "colab_backend.main_docker:main"

[youwol]
default-port = 2010
